--- a/memory_game/css/style.css
+++ b/memory_game/css/style.css
@@ -1,52 +1,52 @@
 h1 {
-font-family: "Raleway", sans-serif;
-color: #FFFFFF;
-letter-spacing: 1px;
-font-weight: 400;
-font-size: 45px;
-text-transform: uppercase;
-margin: 0px;
+	font-family: "Raleway", sans-serif;
+	color: #FFFFFF;
+	letter-spacing: 1px;
+	font-weight: 400;
+	font-size: 45px;
+	text-transform: uppercase;
+	margin: 0px;
 }
 
 h2 {
-font-family: "Raleway", sans-serif;
-color: #FFFFFF;
-letter-spacing: 1px;
-font-weight: 600;
-font-size: 20px;
-text-transform: uppercase;
+	font-family: "Raleway", sans-serif;
+	color: #FFFFFF;
+	letter-spacing: 1px;
+	font-weight: 600;
+	font-size: 20px;
+	text-transform: uppercase;
 }
 
 h3 {
-font-family: "Raleway", sans-serif;
-color: #0D2C40;
-letter-spacing: 1px;
-font-weight: 600;
-font-size: 18px;
-text-transform: uppercase;
+	font-family: "Raleway", sans-serif;
+	color: #0D2C40;
+	letter-spacing: 1px;
+	font-weight: 600;
+	font-size: 18px;
+	text-transform: uppercase;
 }
 
 p {
-font-family: "Droid Serif", serif;
-line-height: 26px;
-font-size: 18px;
+	font-family: "Droid Serif", serif;
+	line-height: 26px;
+	font-size: 18px;
 }
 
 body {
-text-align: center;
-margin: 0px;
+	text-align: center;
+	margin: 0px;
 }
 
 a, a:visited, a:active {
- color: inherit;
- text-decoration: none;
- margin-right: 20px;
- margin-left: 20px;
- border-bottom: 2px solid transparent;
+	 color: inherit;
+	 text-decoration: none;
+	 margin-right: 20px;
+	 margin-left: 20px;
+	 border-bottom: 2px solid transparent;
 }
 
 a:hover {
-border-color: 2px solid #FFFFFF;
+	border-color: 2px solid #FFFFFF;
 }
 
 header {
@@ -94,16 +94,34 @@ footer {
 }
 
 .clearfix:after {
-visibility: hidden;
-display: block;
-content: " ";
-clear: both;
-height: 0;
-font-size: 0;
+	visibility: hidden;
+	display: block;
+	content: " ";
+	clear: both;
+	height: 0;
+	font-size: 0;
 }
 
 
 .name {
 	color: #F15B31;
 	font-weight: 700;
+}
+
+#reset-button {
+	border-width: 1px;
+	margin: 40px;
+	padding: 10px 20px;
+	font-family: "Raleway", sans-serif;
+	color: #0D2C40;
+	letter-spacing: 1px;
+	font-weight: 600;
+	font-size: 15px;
+	background-color: #FFFFFF;
+	border-color: #000000;
+}
+
+#reset-button:hover {
+	background-color: #00A6B3;
+	color: #FFFFFF;
 }
